# nrf51822-controller

./: .gitignore  .gitmodules  CMakeLists.txt
config/: app_config.h  custom_board.h  gcc_nrf51.ld  s130_gcc_nrf51.ld  sdk_config.h
src/: ble_rcontrol.c  ble_rcontrol.h  main.c
